<resources>
    <!-- App Name and Activities -->
    <string name="app_name">MoviesManager</string>
    <string name="title_activity_movie">MovieActivity</string>

    <!-- Common string -->
    <string name="parenthesis">(%s)</string>
    <string name="more">More</string>
    <string name="no_items">No items</string>
    <string name="name">Name</string>

    <!-- Specific strings -->
    <string name="latest">Latest</string>
    <string name="upcoming">Upcoming</string>
    <string name="populars">Populars</string>
    <string name="watchlist">Watchlist</string>

    <!-- Menus -->
    <string name="see_trailer">See trailer</string>

    <!-- Accessibility strings -->
    <string name="movie_cover">Movie\'s Cover</string>
    <string name="unknown_release_date">Unknown release date</string>
    <string name="movie_image">Movie Image</string>

    <!-- Unsorted strings -->
    <string name="dummy"> </string>
    <string name="release_date">Release date</string>
    <string name="watched">Watched</string>
    <string name="synopsis">Synopsis</string>
    <string name="share">Share</string>
    <string name="genresc">Genres: </string>
    <string name="languagec">Language: </string>
    <string name="directorc">Director: </string>
    <string name="runtimec">Runtime: </string>
    <string name="castc">Cast: </string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="filter">Filter</string>
    <string name="movie_name">Movie Name</string>
    <string name="no_matches">No matches found</string>
    <string name="share_via">Share via</string>
    <string name="search_hint">Search for movies</string>
    <string name="searching">Searching…</string>
    <string name="please_wait">Please wait</string>
    <string name="loading">Loading…</string>
    <string name="please_wait_download">Please, wait while download finishes.</string>
    <string name="search_no_internet">Search based on local data. Connect to the internet for better results</string>
    <string name="update">Update</string>
    <string name="added_watchlist">Added to watchlist</string>
    <string name="removed_watchlist">Removed from watchlist</string>
    <string name="marked_watched">%s marked as watched</string>
    <string name="unmarked_watched">%s unmarked as watched</string>

</resources>
