<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_no_margin"
        android:paddingLeft="@dimen/activity_no_margin"
        android:paddingRight="@dimen/activity_no_margin"
        android:paddingTop="@dimen/activity_no_margin"
        tools:context="com.gg.moviesmanager.MovieActivity"
        tools:showIn="@layout/activity_movie">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/movie_image"
            android:adjustViewBounds="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/movie_image"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rating_bar"
            android:stepSize="0.5"
            android:rating="4"
            android:numStars="5"
            android:isIndicator="true"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/movie_image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/release_date"
            android:id="@+id/movie_release_date"
            android:layout_below="@+id/rating_bar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watchlist"
            android:id="@+id/cb_watchlist"
            android:layout_below="@+id/movie_image"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watched"
            android:id="@+id/cb_watched"
            android:layout_below="@+id/cb_watchlist"
            android:layout_alignLeft="@+id/cb_watchlist"
            android:layout_alignStart="@+id/cb_watchlist"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trailer"
            android:maxHeight="60dp"
            android:maxWidth="60dp"
            android:minHeight="60dp"
            android:minWidth="60dp"
            android:layout_toRightOf="@+id/rating_bar"
            android:layout_toEndOf="@+id/rating_bar"
            android:layout_toLeftOf="@+id/cb_watchlist"
            android:layout_toStartOf="@+id/cb_watchlist"
            android:layout_below="@+id/movie_image"
            android:contentDescription="@string/see_trailer"
            android:src="@drawable/ic_ondemand_video_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/synopsis"
            android:id="@+id/synopsis"
            android:layout_below="@+id/trailer"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/genresc"
            android:id="@+id/genres"
            android:layout_marginTop="10dp"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/synopsis"
            android:layout_alignStart="@+id/synopsis"
            android:layout_below="@+id/synopsis"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/languagec"
            android:id="@+id/language"
            android:layout_below="@+id/genres"
            android:layout_alignLeft="@+id/genres"
            android:layout_alignStart="@+id/genres"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/runtimec"
            android:id="@+id/runtime"
            android:layout_below="@+id/language"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/directorc"
            android:id="@+id/director"
            android:layout_below="@+id/runtime"
            android:layout_alignLeft="@+id/runtime"
            android:layout_alignStart="@+id/runtime"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/castc"
            android:id="@+id/cast"
            android:layout_below="@+id/director"
            android:layout_alignLeft="@+id/director"
            android:layout_alignStart="@+id/director"/>

    </RelativeLayout>
</ScrollView>
