<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/movie_cover"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/MoviesCover"
        android:contextClickable="false"
        android:adjustViewBounds="false"
        android:src="@mipmap/ic_launcher"
        android:maxHeight="100dp"
        android:minHeight="100dp"
        android:minWidth="80dp"
        android:maxWidth="80dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@android:string/unknownName"
        android:id="@+id/movie_name"
        android:layout_marginTop="24dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/movie_cover"
        android:layout_toEndOf="@+id/movie_cover"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/unknown_release_date"
        android:id="@+id/movie_release_date"
        android:layout_alignLeft="@+id/movie_name"
        android:layout_alignStart="@+id/movie_name"
        android:layout_below="@+id/movie_name"
        android:layout_marginTop="7dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/parenthesis"
        android:id="@+id/movie_ratings"
        android:layout_alignBottom="@+id/movie_name"
        android:layout_toRightOf="@+id/movie_name"
        android:layout_toEndOf="@+id/movie_name"
        android:layout_marginLeft="8dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/more"
        android:contentDescription="@string/more"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_more_vert_24dp"
        android:layout_alignBottom="@+id/movie_release_date"
        android:layout_marginRight="8dp"/>
</RelativeLayout>